# data_voyager

./: .gitignore  .pre-commit-config.yaml  Brewfile  Brewfile.lock.json  LICENSE  Makefile  README.md  packages.txt
iac/: data.tf  ecr.tf  eks.tf  github_oidc.tf  kms.tf  kubernetes.tf  (+5 more)
pipeline/: .pre-commit-config.yaml  pyproject.toml
pipeline/pipeline/extract/: Dockerfile  README.md  main.py
pipeline/pipeline/extract/utils/: env_helper.py  pull_from_strava.py  s3_helper.py
pipeline/pipeline/iac/: airflow.tf  ecr.tf  ecs.tf  github_oidc.tf  iam.tf  providers.tf  scalr.tf
pipeline/pipeline/iac/supabase/: variables.tf
pipeline/pipeline/load/: README.md  main.py
pipeline/pipeline/load/utils/: env_helper.py  pg_helper.py
pipeline/pipeline/orchestration/: README.md
pipeline/pipeline/orchestration/dags/: daily_0_utc.py
pipeline/pipeline/orchestration/dags/utils/: DbtOperator.py  S3ToSupabaseOperator.py  StravaToS3Operator.py  dag_integrity.py  settings.py
pipeline/pipeline/orchestration/dev/: Makefile  requirements.txt
pipeline/pipeline/terraform/: README.md  airflow.tf  ecs.tf  gha_service_user.tf  github_oidc.tf  iam.tf  locals.tf  logs.tf  networking.tf  providers.tf  s3.tf
pipeline/pipeline/terraform/supabase/: project.tf  settings.tf  variables.tf
pipeline/pipeline/transformation/: README.md
pipeline/pipeline/transformation/ace/: .gitignore  .user.yml  Dockerfile  dbt_project.yml  profiles.yml  requirements.txt
pipeline/pipeline/transformation/ace/models/dwd/strava/: dwd_strava__activity_df.sql
pipeline/pipeline/transformation/ace/models/dws/strava/: dws_strava__type_effort_df.sql
simple_pipeline/: pyproject.toml
(+51 files in other folders)
