[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["haojunsng <snghaojun@outlook.sg>"]
readme = "README.md"
packages = [{include = "pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
